@@ -3,6 +3,7 @@
     users
   * Added a dialog to jump directly to a position, with a default key of J
   * Enter/Esc will do what you'd expect on the startup dialog
+  * World list is now scrollable, on main startup screen
 
 Minecraft X-Ray 2.7 Maintenance Branch 9 (2011.02.22)
 
